# black-angus-lambda

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  prepare-build.sh  pyproject.toml  requirements-lock.txt  requirements.txt  serverless.yml  setup.cfg  zappa_settings.json
blackangus/: app.py
blackangus/models/v1/: __init__.py  line.py
blackangus/routers/v1/: line.py
blackangus/routes/v1/: line.py
blackangus/scrapper/v1/: base.py  line.py
blackangus/scrappers/v1/: base.py  line.py
tests/routers/v1/: line_test.py
tests/scrappers/v1/: line_test.py
