[tool.poetry]
name = "black-angus-lambda"
version = "2.0.0-beta1"
description = "Lambda Scrapper for Black Angus Bot"
authors = ["Haze Lee <hazelee@realignist.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
httpx = "^0.23.0"
lxml = "^4.9.1"
cssselect = "^1.1.0"
mangum = "^0.15.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
ujson = "^5.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
aioresponses = "^0.7.3"
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
pre-commit = "^2.20.0"
black = "^22.6.0"
time-machine = "^2.7.1"
types-orjson = "^3.6.2"
isort = "^5.10.1"
types-lxml = "^2022.4.10"
pytest-httpx = "^0.21.0"
orjson = "^3.7.9"
types-ujson = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
